[package]
name = "nex-rs"
version = "1.0.0"
edition = "2021"

# Voir plus de clés et leurs définitions ici : https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
ntest = "0.7.5"

[dependencies]
arc4 = "0.1.0"
async-trait = "0.1.52"
byteorder = "1.5.0"
chrono = "0.4.41"
cipher = "0.4.4"
getset = "0.1.2"
hmac = "0.12.1"
md-5 = "0.10.1"
num_cpus = "1.16.0"
num_enum = "0.7.3"
rand = "0.8.5"
rc4 = "0.1.0"
rust-crypto = "0.2.36"
snafu = { version = "0.6.10", default-features = false }

[lib]
name = "nex_rs"
path = "lib.rs"
